# ROOM_RESERVATIONS

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
reservations/: admin.py  models.py  serializers.py  test_main.py  urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_alter_clients_email.py  0003_alter_reservation_created_at_alter_reservation_room_and_more.py  0004_clients_user.py  0005_reservation_number_of_guests_and_more.py
reservations/tests/: test_model_clients.py  test_model_reservation.py  test_model_room.py  test_view_clients.py  test_view_reservation.py  test_view_room.py
